--- a/templates/video_predict.html
+++ b/templates/video_predict.html
@@ -10,12 +10,12 @@
     <input type="submit">
 </form>
 <p>Result:</p>
-    <video width="1200" controls muted="muted">
+    <video width="600" controls muted="muted">
         <source src="../assets/uploadVideo.mp4" type="video/mp4" />
 
     </video>
-<video width="1200" controls muted="muted">
-    <source src="../test/uploadVideo.mp4" type="video/mp4" />
+<video width="600" controls muted="muted">
+    <source src="{{ source }}" type="video/mp4" />
 </video>
 </body>
 </html>
